--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                                                                         <div id="state-done" title="Отметить дело, как выполненое"></div>
                                                                                     </td>
                                                                                     <td>
-                                                                                        <a href="#" id="taskSettingsBtn">
+                                                                                        <a href="javascript:settingsBtn()" id="taskSettingsBtn" script="/scripts/script.js">
                                                                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
                                                                                                 <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
                                                                                               </svg>
@@ -120,9 +120,9 @@
                                                                 </ul>
                                                             </div>
                                                         </td>
-                                                        <td>
+                                                        <td style="position: absolute;">
                                                             <div class="taskSettingsContainer">
-                                                                <div id="taskSettingsPanel" style="display: none;">
+                                                                <div id="taskSettingsPanel" style="display: block;">
                                                                     <p>Настройки выбранного дела</p>
                                                                     <table>
                                                                         <tbody>
@@ -138,6 +138,11 @@
                                                                             </tr>
                                                                             <tr>
                                                                                 <td><p>Приоритет</p></td>
+                                                                                <td><select name="Приоритет" id="prioritySettings">
+                                                                                    <option value="low">Низкий</option>
+                                                                                    <option value="medium">Средний</option>
+                                                                                    <option value="hight">Высокий</option>
+                                                                                </select></td>
                                                                             </tr>
                                                                             <tr>
                                                                                 <td><button id="saveSettingsBtn">Сохранить</button></td>
